# NI-PDP

./: CMakeLists.txt  README.md  main.cpp  results.txt
common/: Board.cpp  Board.h  Pieces.cpp  Pieces.h
data/: mapb10_10a.txt  mapb10_10b.txt  mapb10_10c.txt  mapb10_10d.txt  mapb6_6c.txt  mapb7_7c.txt  mapb7_7d.txt  mapb7_7e.txt  mapb7_7k.txt  mapb8_7c.txt  mapb8_7d.txt  mapb8_7f.txt  mapb8_7i.txt  mapb8_8a.txt  mapb8_8b.txt  mapb9_9a.txt  mapb9_9b.txt  mapb9_9c.txt
solvers/: MpiSolver.cpp  MpiSolver.h  OmpSolver.cpp  OmpSolver.h  OmpTaskSolver.cpp  OmpTaskSolver.h  SequentialSolver.cpp  SequentialSolver.h
tests/: TestPiecesLogic.cpp  test_pieces_logic.cpp
